// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`comprehensive getters > getFormSections returns the distinct section list per type (snapshot) 1`] = `
{
  "BUILDER": [
    "Basic Information",
    "Address Information",
    "Builder Information",
    "Office Information",
    "Staff Information",
    "Document Verification",
    "Third Party Confirmation",
    "Shifting & Contact Details",
    "Assessment & Feedback",
    "Final Status & Recommendations",
  ],
  "BUSINESS": [
    "Basic Information",
    "Business Details",
    "Location Details",
    "Working Details",
    "Document Verification",
    "TPC Details",
    "Shifting Details",
    "Contact & Communication",
    "Area Assessment",
  ],
  "DSA_CONNECTOR": [
    "Basic Information",
    "Business Information",
    "Shifted Information",
    "NSP Information",
    "ERT Information",
    "Address Information",
    "Office Information",
    "Staff Information",
    "Third Party Confirmation",
    "Shifting & Contact Details",
    "Risk Assessment & Final Status",
  ],
  "NOC": [
    "Basic Information",
    "NOC Information",
    "Shifted Information",
    "NSP Information",
    "Address Information",
    "Property & Project Information",
    "Document Verification",
    "Third Party Confirmation",
    "Shifting & Contact Details",
    "Infrastructure & Assessment",
    "Final Status & Recommendations",
  ],
  "OFFICE": [
    "Basic Information",
    "Office Details",
    "Document Verification",
    "Location Details",
    "TPC Details",
    "Area Assessment",
  ],
  "PROPERTY_APF": [
    "Basic Information",
    "Address Information",
    "Property Details",
    "Project Information",
    "Name Plates & Boards",
    "Third Party Confirmation",
    "Untraceable",
    "Infrastructure & Area Assessment",
  ],
  "PROPERTY_INDIVIDUAL": [
    "Basic Information",
    "Address Information",
    "Third Party Confirmation",
    "Untraceable",
    "Area Assessment & Reputation",
  ],
  "RESIDENCE": [
    "Basic Information",
    "Location Details",
    "Personal Details",
    "Document Verification",
    "Property Details",
    "Shifting Details",
    "NSP Details",
    "Entry Restriction Details",
    "Contact Details",
    "Third Party Confirmation",
    "Area Assessment",
  ],
  "RESIDENCE_CUM_OFFICE": [
    "Basic Information",
    "Address Information",
    "Residence Information",
    "Applicant Information",
    "Office Information",
    "Setup",
    "Personal Details",
    "Staff Information",
    "Document Verification",
    "Third Party Confirmation",
    "Shifting & Contact Details",
    "Area Assessment & Final Status",
  ],
}
`;

exports[`comprehensive getters > getFormTypeLabel and getVerificationTableName are stable (snapshot) 1`] = `
{
  "labels": {
    "ENTRY_RESTRICTED": "Entry Restricted (ERT)",
    "NSP": "NSP & Door Lock",
    "POSITIVE": "Positive & Door Locked",
    "SHIFTED": "Shifted & Door Lock",
    "UNKNOWN": "UNKNOWN",
    "UNTRACEABLE": "Untraceable",
  },
  "tables": {
    "BUILDER": "builderVerificationReports",
    "BUSINESS": "businessVerificationReports",
    "CONNECTOR": "residenceVerificationReports",
    "DSA_CONNECTOR": "dsaConnectorVerificationReports",
    "NOC": "nocVerificationReports",
    "OFFICE": "officeVerificationReports",
    "PROPERTY_APF": "propertyApfVerificationReports",
    "PROPERTY_INDIVIDUAL": "propertyIndividualVerificationReports",
    "RESIDENCE": "residenceVerificationReports",
    "RESIDENCE_CUM_OFFICE": "residenceCumOfficeVerificationReports",
    "UNKNOWN": "residenceVerificationReports",
  },
}
`;

exports[`ensureAll*FieldsPopulated — full field shape per form type > builder / ENTRY_RESTRICTED — empty input yields the canonical field set (all null) 1`] = `
{
  "address_floor": null,
  "address_locatable": null,
  "address_rating": null,
  "address_structure": null,
  "address_structure_color": null,
  "applicant_working_status": null,
  "builder_type": null,
  "business_exists_status": null,
  "business_period": null,
  "call_remark": null,
  "company_name_plate_status": null,
  "company_nature_of_business": null,
  "contact_person": null,
  "current_company_name": null,
  "document_shown": null,
  "dominated_area": null,
  "door_color": null,
  "feedback_from_neighbour": null,
  "final_status": null,
  "landmark1": null,
  "landmark2": null,
  "landmark3": null,
  "landmark4": null,
  "locality": null,
  "met_person_confirmation": null,
  "met_person_designation": null,
  "met_person_name": null,
  "met_person_type": null,
  "name_on_board": null,
  "office_approx_area": null,
  "office_existence": null,
  "office_status": null,
  "old_office_shifted_period": null,
  "other_observation": null,
  "political_connection": null,
  "staff_seen": null,
  "staff_strength": null,
  "tpc_confirmation1": null,
  "tpc_confirmation2": null,
  "tpc_met_person1": null,
  "tpc_met_person2": null,
  "tpc_name1": null,
  "tpc_name2": null,
}
`;

exports[`ensureAll*FieldsPopulated — full field shape per form type > builder / NSP — empty input yields the canonical field set (all null) 1`] = `
{
  "address_floor": null,
  "address_locatable": null,
  "address_rating": null,
  "address_structure": null,
  "address_structure_color": null,
  "applicant_working_status": null,
  "builder_type": null,
  "business_exists_status": null,
  "business_period": null,
  "call_remark": null,
  "company_name_plate_status": null,
  "company_nature_of_business": null,
  "contact_person": null,
  "current_company_name": null,
  "document_shown": null,
  "dominated_area": null,
  "door_color": null,
  "feedback_from_neighbour": null,
  "final_status": null,
  "landmark1": null,
  "landmark2": null,
  "landmark3": null,
  "landmark4": null,
  "locality": null,
  "met_person_confirmation": null,
  "met_person_designation": null,
  "met_person_name": null,
  "met_person_type": null,
  "name_on_board": null,
  "office_approx_area": null,
  "office_existence": null,
  "office_status": null,
  "old_office_shifted_period": null,
  "other_observation": null,
  "political_connection": null,
  "staff_seen": null,
  "staff_strength": null,
  "tpc_confirmation1": null,
  "tpc_confirmation2": null,
  "tpc_met_person1": null,
  "tpc_met_person2": null,
  "tpc_name1": null,
  "tpc_name2": null,
}
`;

exports[`ensureAll*FieldsPopulated — full field shape per form type > builder / POSITIVE — empty input yields the canonical field set (all null) 1`] = `
{
  "address_floor": null,
  "address_locatable": null,
  "address_rating": null,
  "address_structure": null,
  "address_structure_color": null,
  "applicant_working_status": null,
  "builder_type": null,
  "business_exists_status": null,
  "business_period": null,
  "call_remark": null,
  "company_name_plate_status": null,
  "company_nature_of_business": null,
  "contact_person": null,
  "current_company_name": null,
  "document_shown": null,
  "dominated_area": null,
  "door_color": null,
  "feedback_from_neighbour": null,
  "final_status": null,
  "landmark1": null,
  "landmark2": null,
  "landmark3": null,
  "landmark4": null,
  "locality": null,
  "met_person_confirmation": null,
  "met_person_designation": null,
  "met_person_name": null,
  "met_person_type": null,
  "name_on_board": null,
  "office_approx_area": null,
  "office_existence": null,
  "office_status": null,
  "old_office_shifted_period": null,
  "other_observation": null,
  "political_connection": null,
  "staff_seen": null,
  "staff_strength": null,
  "tpc_confirmation1": null,
  "tpc_confirmation2": null,
  "tpc_met_person1": null,
  "tpc_met_person2": null,
  "tpc_name1": null,
  "tpc_name2": null,
}
`;

exports[`ensureAll*FieldsPopulated — full field shape per form type > builder / SHIFTED — empty input yields the canonical field set (all null) 1`] = `
{
  "address_floor": null,
  "address_locatable": null,
  "address_rating": null,
  "address_structure": null,
  "address_structure_color": null,
  "applicant_working_status": null,
  "builder_type": null,
  "business_exists_status": null,
  "business_period": null,
  "call_remark": null,
  "company_name_plate_status": null,
  "company_nature_of_business": null,
  "contact_person": null,
  "current_company_name": null,
  "document_shown": null,
  "dominated_area": null,
  "door_color": null,
  "feedback_from_neighbour": null,
  "final_status": null,
  "landmark1": null,
  "landmark2": null,
  "landmark3": null,
  "landmark4": null,
  "locality": null,
  "met_person_confirmation": null,
  "met_person_designation": null,
  "met_person_name": null,
  "met_person_type": null,
  "name_on_board": null,
  "office_approx_area": null,
  "office_existence": null,
  "office_status": null,
  "old_office_shifted_period": null,
  "other_observation": null,
  "political_connection": null,
  "staff_seen": null,
  "staff_strength": null,
  "tpc_confirmation1": null,
  "tpc_confirmation2": null,
  "tpc_met_person1": null,
  "tpc_met_person2": null,
  "tpc_name1": null,
  "tpc_name2": null,
}
`;

exports[`ensureAll*FieldsPopulated — full field shape per form type > builder / UNTRACEABLE — empty input yields the canonical field set (all null) 1`] = `
{
  "address_floor": null,
  "address_locatable": null,
  "address_rating": null,
  "address_structure": null,
  "address_structure_color": null,
  "applicant_working_status": null,
  "builder_type": null,
  "business_exists_status": null,
  "business_period": null,
  "call_remark": null,
  "company_name_plate_status": null,
  "company_nature_of_business": null,
  "contact_person": null,
  "current_company_name": null,
  "document_shown": null,
  "dominated_area": null,
  "door_color": null,
  "feedback_from_neighbour": null,
  "final_status": null,
  "landmark1": null,
  "landmark2": null,
  "landmark3": null,
  "landmark4": null,
  "locality": null,
  "met_person_confirmation": null,
  "met_person_designation": null,
  "met_person_name": null,
  "met_person_type": null,
  "name_on_board": null,
  "office_approx_area": null,
  "office_existence": null,
  "office_status": null,
  "old_office_shifted_period": null,
  "other_observation": null,
  "political_connection": null,
  "staff_seen": null,
  "staff_strength": null,
  "tpc_confirmation1": null,
  "tpc_confirmation2": null,
  "tpc_met_person1": null,
  "tpc_met_person2": null,
  "tpc_name1": null,
  "tpc_name2": null,
}
`;

exports[`ensureAll*FieldsPopulated — full field shape per form type > builder — unknown formType still returns the canonical field set 1`] = `
{
  "address_floor": null,
  "address_locatable": null,
  "address_rating": null,
  "address_structure": null,
  "address_structure_color": null,
  "applicant_working_status": null,
  "builder_type": null,
  "business_exists_status": null,
  "business_period": null,
  "call_remark": null,
  "company_name_plate_status": null,
  "company_nature_of_business": null,
  "contact_person": null,
  "current_company_name": null,
  "document_shown": null,
  "dominated_area": null,
  "door_color": null,
  "feedback_from_neighbour": null,
  "final_status": null,
  "landmark1": null,
  "landmark2": null,
  "landmark3": null,
  "landmark4": null,
  "locality": null,
  "met_person_confirmation": null,
  "met_person_designation": null,
  "met_person_name": null,
  "met_person_type": null,
  "name_on_board": null,
  "office_approx_area": null,
  "office_existence": null,
  "office_status": null,
  "old_office_shifted_period": null,
  "other_observation": null,
  "political_connection": null,
  "staff_seen": null,
  "staff_strength": null,
  "tpc_confirmation1": null,
  "tpc_confirmation2": null,
  "tpc_met_person1": null,
  "tpc_met_person2": null,
  "tpc_name1": null,
  "tpc_name2": null,
}
`;

exports[`ensureAll*FieldsPopulated — full field shape per form type > business / ENTRY_RESTRICTED — empty input yields the canonical field set (all null) 1`] = `
{
  "address_floor": null,
  "address_locatable": null,
  "address_rating": null,
  "address_status": null,
  "address_structure": null,
  "address_structure_color": null,
  "applicant_working_status": null,
  "business_approx_area": null,
  "business_existence": null,
  "business_exists_status": null,
  "business_period": null,
  "business_status": null,
  "business_type": null,
  "call_remark": null,
  "company_name_plate_status": null,
  "company_nature_of_business": null,
  "contact_person": null,
  "current_company_name": null,
  "document_shown": null,
  "dominated_area": null,
  "door_color": null,
  "feedback_from_neighbour": null,
  "final_status": null,
  "landmark1": null,
  "landmark2": null,
  "landmark3": null,
  "landmark4": null,
  "locality": null,
  "met_person_confirmation": null,
  "met_person_designation": null,
  "met_person_name": null,
  "met_person_type": null,
  "name_on_board": null,
  "old_business_shifted_period": null,
  "other_observation": null,
  "ownership_type": null,
  "political_connection": null,
  "staff_seen": null,
  "staff_strength": null,
  "tpc_confirmation1": null,
  "tpc_confirmation2": null,
  "tpc_met_person1": null,
  "tpc_met_person2": null,
  "tpc_name1": null,
  "tpc_name2": null,
}
`;

exports[`ensureAll*FieldsPopulated — full field shape per form type > business / NSP — empty input yields the canonical field set (all null) 1`] = `
{
  "address_floor": null,
  "address_locatable": null,
  "address_rating": null,
  "address_status": null,
  "address_structure": null,
  "address_structure_color": null,
  "applicant_working_status": null,
  "business_approx_area": null,
  "business_existence": null,
  "business_exists_status": null,
  "business_period": null,
  "business_status": null,
  "business_type": null,
  "call_remark": null,
  "company_name_plate_status": null,
  "company_nature_of_business": null,
  "contact_person": null,
  "current_company_name": null,
  "document_shown": null,
  "dominated_area": null,
  "door_color": null,
  "feedback_from_neighbour": null,
  "final_status": null,
  "landmark1": null,
  "landmark2": null,
  "landmark3": null,
  "landmark4": null,
  "locality": null,
  "met_person_confirmation": null,
  "met_person_designation": null,
  "met_person_name": null,
  "met_person_type": null,
  "name_on_board": null,
  "old_business_shifted_period": null,
  "other_observation": null,
  "ownership_type": null,
  "political_connection": null,
  "staff_seen": null,
  "staff_strength": null,
  "tpc_confirmation1": null,
  "tpc_confirmation2": null,
  "tpc_met_person1": null,
  "tpc_met_person2": null,
  "tpc_name1": null,
  "tpc_name2": null,
}
`;

exports[`ensureAll*FieldsPopulated — full field shape per form type > business / POSITIVE — empty input yields the canonical field set (all null) 1`] = `
{
  "address_floor": null,
  "address_locatable": null,
  "address_rating": null,
  "address_status": null,
  "address_structure": null,
  "address_structure_color": null,
  "applicant_working_status": null,
  "business_approx_area": null,
  "business_existence": null,
  "business_exists_status": null,
  "business_period": null,
  "business_status": null,
  "business_type": null,
  "call_remark": null,
  "company_name_plate_status": null,
  "company_nature_of_business": null,
  "contact_person": null,
  "current_company_name": null,
  "document_shown": null,
  "dominated_area": null,
  "door_color": null,
  "feedback_from_neighbour": null,
  "final_status": null,
  "landmark1": null,
  "landmark2": null,
  "landmark3": null,
  "landmark4": null,
  "locality": null,
  "met_person_confirmation": null,
  "met_person_designation": null,
  "met_person_name": null,
  "met_person_type": null,
  "name_on_board": null,
  "old_business_shifted_period": null,
  "other_observation": null,
  "ownership_type": null,
  "political_connection": null,
  "staff_seen": null,
  "staff_strength": null,
  "tpc_confirmation1": null,
  "tpc_confirmation2": null,
  "tpc_met_person1": null,
  "tpc_met_person2": null,
  "tpc_name1": null,
  "tpc_name2": null,
}
`;

exports[`ensureAll*FieldsPopulated — full field shape per form type > business / SHIFTED — empty input yields the canonical field set (all null) 1`] = `
{
  "address_floor": null,
  "address_locatable": null,
  "address_rating": null,
  "address_status": null,
  "address_structure": null,
  "address_structure_color": null,
  "applicant_working_status": null,
  "business_approx_area": null,
  "business_existence": null,
  "business_exists_status": null,
  "business_period": null,
  "business_status": null,
  "business_type": null,
  "call_remark": null,
  "company_name_plate_status": null,
  "company_nature_of_business": null,
  "contact_person": null,
  "current_company_name": null,
  "document_shown": null,
  "dominated_area": null,
  "door_color": null,
  "feedback_from_neighbour": null,
  "final_status": null,
  "landmark1": null,
  "landmark2": null,
  "landmark3": null,
  "landmark4": null,
  "locality": null,
  "met_person_confirmation": null,
  "met_person_designation": null,
  "met_person_name": null,
  "met_person_type": null,
  "name_on_board": null,
  "old_business_shifted_period": null,
  "other_observation": null,
  "ownership_type": null,
  "political_connection": null,
  "staff_seen": null,
  "staff_strength": null,
  "tpc_confirmation1": null,
  "tpc_confirmation2": null,
  "tpc_met_person1": null,
  "tpc_met_person2": null,
  "tpc_name1": null,
  "tpc_name2": null,
}
`;

exports[`ensureAll*FieldsPopulated — full field shape per form type > business / UNTRACEABLE — empty input yields the canonical field set (all null) 1`] = `
{
  "address_floor": null,
  "address_locatable": null,
  "address_rating": null,
  "address_status": null,
  "address_structure": null,
  "address_structure_color": null,
  "applicant_working_status": null,
  "business_approx_area": null,
  "business_existence": null,
  "business_exists_status": null,
  "business_period": null,
  "business_status": null,
  "business_type": null,
  "call_remark": null,
  "company_name_plate_status": null,
  "company_nature_of_business": null,
  "contact_person": null,
  "current_company_name": null,
  "document_shown": null,
  "dominated_area": null,
  "door_color": null,
  "feedback_from_neighbour": null,
  "final_status": null,
  "landmark1": null,
  "landmark2": null,
  "landmark3": null,
  "landmark4": null,
  "locality": null,
  "met_person_confirmation": null,
  "met_person_designation": null,
  "met_person_name": null,
  "met_person_type": null,
  "name_on_board": null,
  "old_business_shifted_period": null,
  "other_observation": null,
  "ownership_type": null,
  "political_connection": null,
  "staff_seen": null,
  "staff_strength": null,
  "tpc_confirmation1": null,
  "tpc_confirmation2": null,
  "tpc_met_person1": null,
  "tpc_met_person2": null,
  "tpc_name1": null,
  "tpc_name2": null,
}
`;

exports[`ensureAll*FieldsPopulated — full field shape per form type > business — unknown formType still returns the canonical field set 1`] = `
{
  "address_floor": null,
  "address_locatable": null,
  "address_rating": null,
  "address_status": null,
  "address_structure": null,
  "address_structure_color": null,
  "applicant_working_status": null,
  "business_approx_area": null,
  "business_existence": null,
  "business_exists_status": null,
  "business_period": null,
  "business_status": null,
  "business_type": null,
  "call_remark": null,
  "company_name_plate_status": null,
  "company_nature_of_business": null,
  "contact_person": null,
  "current_company_name": null,
  "document_shown": null,
  "dominated_area": null,
  "door_color": null,
  "feedback_from_neighbour": null,
  "final_status": null,
  "landmark1": null,
  "landmark2": null,
  "landmark3": null,
  "landmark4": null,
  "locality": null,
  "met_person_confirmation": null,
  "met_person_designation": null,
  "met_person_name": null,
  "met_person_type": null,
  "name_on_board": null,
  "old_business_shifted_period": null,
  "other_observation": null,
  "ownership_type": null,
  "political_connection": null,
  "staff_seen": null,
  "staff_strength": null,
  "tpc_confirmation1": null,
  "tpc_confirmation2": null,
  "tpc_met_person1": null,
  "tpc_met_person2": null,
  "tpc_name1": null,
  "tpc_name2": null,
}
`;

exports[`ensureAll*FieldsPopulated — full field shape per form type > dsaConnector / ENTRY_RESTRICTED — empty input yields the canonical field set (all null) 1`] = `
{
  "active_client": null,
  "address_floor": null,
  "address_locatable": null,
  "address_rating": null,
  "address_status": null,
  "address_structure": null,
  "address_structure_color": null,
  "business_existence": null,
  "business_exists_status": null,
  "business_period": null,
  "business_type": null,
  "call_remark": null,
  "company_name_plate_status": null,
  "company_nature_of_business": null,
  "contact_person": null,
  "dominated_area": null,
  "door_color": null,
  "feedback_from_neighbour": null,
  "final_status": null,
  "landmark1": null,
  "landmark2": null,
  "landmark3": null,
  "landmark4": null,
  "locality": null,
  "met_person_designation": null,
  "met_person_name": null,
  "met_person_type": null,
  "name_of_company_owners": null,
  "name_on_board": null,
  "office_area": null,
  "office_status": null,
  "other_observation": null,
  "ownership_type": null,
  "political_connection": null,
  "premises_status": null,
  "security_confirmation": null,
  "shifted_period": null,
  "staff_seen": null,
  "total_staff": null,
  "tpc_confirmation1": null,
  "tpc_confirmation2": null,
  "tpc_met_person1": null,
  "tpc_met_person2": null,
  "tpc_name1": null,
  "tpc_name2": null,
}
`;

exports[`ensureAll*FieldsPopulated — full field shape per form type > dsaConnector / NSP — empty input yields the canonical field set (all null) 1`] = `
{
  "active_client": null,
  "address_floor": null,
  "address_locatable": null,
  "address_rating": null,
  "address_status": null,
  "address_structure": null,
  "address_structure_color": null,
  "business_existence": null,
  "business_exists_status": null,
  "business_period": null,
  "business_type": null,
  "call_remark": null,
  "company_name_plate_status": null,
  "company_nature_of_business": null,
  "contact_person": null,
  "dominated_area": null,
  "door_color": null,
  "feedback_from_neighbour": null,
  "final_status": null,
  "landmark1": null,
  "landmark2": null,
  "landmark3": null,
  "landmark4": null,
  "locality": null,
  "met_person_designation": null,
  "met_person_name": null,
  "met_person_type": null,
  "name_of_company_owners": null,
  "name_on_board": null,
  "office_area": null,
  "office_status": null,
  "other_observation": null,
  "ownership_type": null,
  "political_connection": null,
  "premises_status": null,
  "security_confirmation": null,
  "shifted_period": null,
  "staff_seen": null,
  "total_staff": null,
  "tpc_confirmation1": null,
  "tpc_confirmation2": null,
  "tpc_met_person1": null,
  "tpc_met_person2": null,
  "tpc_name1": null,
  "tpc_name2": null,
}
`;

exports[`ensureAll*FieldsPopulated — full field shape per form type > dsaConnector / POSITIVE — empty input yields the canonical field set (all null) 1`] = `
{
  "active_client": null,
  "address_floor": null,
  "address_locatable": null,
  "address_rating": null,
  "address_status": null,
  "address_structure": null,
  "address_structure_color": null,
  "business_existence": null,
  "business_exists_status": null,
  "business_period": null,
  "business_type": null,
  "call_remark": null,
  "company_name_plate_status": null,
  "company_nature_of_business": null,
  "contact_person": null,
  "dominated_area": null,
  "door_color": null,
  "feedback_from_neighbour": null,
  "final_status": null,
  "landmark1": null,
  "landmark2": null,
  "landmark3": null,
  "landmark4": null,
  "locality": null,
  "met_person_designation": null,
  "met_person_name": null,
  "met_person_type": null,
  "name_of_company_owners": null,
  "name_on_board": null,
  "office_area": null,
  "office_status": null,
  "other_observation": null,
  "ownership_type": null,
  "political_connection": null,
  "premises_status": null,
  "security_confirmation": null,
  "shifted_period": null,
  "staff_seen": null,
  "total_staff": null,
  "tpc_confirmation1": null,
  "tpc_confirmation2": null,
  "tpc_met_person1": null,
  "tpc_met_person2": null,
  "tpc_name1": null,
  "tpc_name2": null,
}
`;

exports[`ensureAll*FieldsPopulated — full field shape per form type > dsaConnector / SHIFTED — empty input yields the canonical field set (all null) 1`] = `
{
  "active_client": null,
  "address_floor": null,
  "address_locatable": null,
  "address_rating": null,
  "address_status": null,
  "address_structure": null,
  "address_structure_color": null,
  "business_existence": null,
  "business_exists_status": null,
  "business_period": null,
  "business_type": null,
  "call_remark": null,
  "company_name_plate_status": null,
  "company_nature_of_business": null,
  "contact_person": null,
  "dominated_area": null,
  "door_color": null,
  "feedback_from_neighbour": null,
  "final_status": null,
  "landmark1": null,
  "landmark2": null,
  "landmark3": null,
  "landmark4": null,
  "locality": null,
  "met_person_designation": null,
  "met_person_name": null,
  "met_person_type": null,
  "name_of_company_owners": null,
  "name_on_board": null,
  "office_area": null,
  "office_status": null,
  "other_observation": null,
  "ownership_type": null,
  "political_connection": null,
  "premises_status": null,
  "security_confirmation": null,
  "shifted_period": null,
  "staff_seen": null,
  "total_staff": null,
  "tpc_confirmation1": null,
  "tpc_confirmation2": null,
  "tpc_met_person1": null,
  "tpc_met_person2": null,
  "tpc_name1": null,
  "tpc_name2": null,
}
`;

exports[`ensureAll*FieldsPopulated — full field shape per form type > dsaConnector / UNTRACEABLE — empty input yields the canonical field set (all null) 1`] = `
{
  "active_client": null,
  "address_floor": null,
  "address_locatable": null,
  "address_rating": null,
  "address_status": null,
  "address_structure": null,
  "address_structure_color": null,
  "business_existence": null,
  "business_exists_status": null,
  "business_period": null,
  "business_type": null,
  "call_remark": null,
  "company_name_plate_status": null,
  "company_nature_of_business": null,
  "contact_person": null,
  "dominated_area": null,
  "door_color": null,
  "feedback_from_neighbour": null,
  "final_status": null,
  "landmark1": null,
  "landmark2": null,
  "landmark3": null,
  "landmark4": null,
  "locality": null,
  "met_person_designation": null,
  "met_person_name": null,
  "met_person_type": null,
  "name_of_company_owners": null,
  "name_on_board": null,
  "office_area": null,
  "office_status": null,
  "other_observation": null,
  "ownership_type": null,
  "political_connection": null,
  "premises_status": null,
  "security_confirmation": null,
  "shifted_period": null,
  "staff_seen": null,
  "total_staff": null,
  "tpc_confirmation1": null,
  "tpc_confirmation2": null,
  "tpc_met_person1": null,
  "tpc_met_person2": null,
  "tpc_name1": null,
  "tpc_name2": null,
}
`;

exports[`ensureAll*FieldsPopulated — full field shape per form type > dsaConnector — unknown formType still returns the canonical field set 1`] = `
{
  "active_client": null,
  "address_floor": null,
  "address_locatable": null,
  "address_rating": null,
  "address_status": null,
  "address_structure": null,
  "address_structure_color": null,
  "business_existence": null,
  "business_exists_status": null,
  "business_period": null,
  "business_type": null,
  "call_remark": null,
  "company_name_plate_status": null,
  "company_nature_of_business": null,
  "contact_person": null,
  "dominated_area": null,
  "door_color": null,
  "feedback_from_neighbour": null,
  "final_status": null,
  "landmark1": null,
  "landmark2": null,
  "landmark3": null,
  "landmark4": null,
  "locality": null,
  "met_person_designation": null,
  "met_person_name": null,
  "met_person_type": null,
  "name_of_company_owners": null,
  "name_on_board": null,
  "office_area": null,
  "office_status": null,
  "other_observation": null,
  "ownership_type": null,
  "political_connection": null,
  "premises_status": null,
  "security_confirmation": null,
  "shifted_period": null,
  "staff_seen": null,
  "total_staff": null,
  "tpc_confirmation1": null,
  "tpc_confirmation2": null,
  "tpc_met_person1": null,
  "tpc_met_person2": null,
  "tpc_name1": null,
  "tpc_name2": null,
}
`;

exports[`ensureAll*FieldsPopulated — full field shape per form type > noc / ENTRY_RESTRICTED — empty input yields the canonical field set (all null) 1`] = `
{
  "address_floor": null,
  "address_locatable": null,
  "address_rating": null,
  "address_structure": null,
  "address_structure_color": null,
  "authorised_signature": null,
  "call_remark": null,
  "contact_person": null,
  "dominated_area": null,
  "door_color": null,
  "feedback_from_neighbour": null,
  "final_status": null,
  "flat_no": null,
  "landmark1": null,
  "landmark2": null,
  "landmark3": null,
  "landmark4": null,
  "locality": null,
  "met_person_designation": null,
  "met_person_name": null,
  "name_on_noc": null,
  "office_status": null,
  "other_observation": null,
  "political_connection": null,
  "premises_status": null,
  "tpc_confirmation1": null,
  "tpc_confirmation2": null,
  "tpc_met_person1": null,
  "tpc_met_person2": null,
  "tpc_name1": null,
  "tpc_name2": null,
}
`;

exports[`ensureAll*FieldsPopulated — full field shape per form type > noc / NSP — empty input yields the canonical field set (all null) 1`] = `
{
  "address_floor": null,
  "address_locatable": null,
  "address_rating": null,
  "address_structure": null,
  "address_structure_color": null,
  "authorised_signature": null,
  "call_remark": null,
  "contact_person": null,
  "dominated_area": null,
  "door_color": null,
  "feedback_from_neighbour": null,
  "final_status": null,
  "flat_no": null,
  "landmark1": null,
  "landmark2": null,
  "landmark3": null,
  "landmark4": null,
  "locality": null,
  "met_person_designation": null,
  "met_person_name": null,
  "name_on_noc": null,
  "office_status": null,
  "other_observation": null,
  "political_connection": null,
  "premises_status": null,
  "tpc_confirmation1": null,
  "tpc_confirmation2": null,
  "tpc_met_person1": null,
  "tpc_met_person2": null,
  "tpc_name1": null,
  "tpc_name2": null,
}
`;

exports[`ensureAll*FieldsPopulated — full field shape per form type > noc / POSITIVE — empty input yields the canonical field set (all null) 1`] = `
{
  "address_floor": null,
  "address_locatable": null,
  "address_rating": null,
  "address_structure": null,
  "address_structure_color": null,
  "authorised_signature": null,
  "call_remark": null,
  "contact_person": null,
  "dominated_area": null,
  "door_color": null,
  "feedback_from_neighbour": null,
  "final_status": null,
  "flat_no": null,
  "landmark1": null,
  "landmark2": null,
  "landmark3": null,
  "landmark4": null,
  "locality": null,
  "met_person_designation": null,
  "met_person_name": null,
  "name_on_noc": null,
  "office_status": null,
  "other_observation": null,
  "political_connection": null,
  "premises_status": null,
  "tpc_confirmation1": null,
  "tpc_confirmation2": null,
  "tpc_met_person1": null,
  "tpc_met_person2": null,
  "tpc_name1": null,
  "tpc_name2": null,
}
`;

exports[`ensureAll*FieldsPopulated — full field shape per form type > noc / SHIFTED — empty input yields the canonical field set (all null) 1`] = `
{
  "address_floor": null,
  "address_locatable": null,
  "address_rating": null,
  "address_structure": null,
  "address_structure_color": null,
  "authorised_signature": null,
  "call_remark": null,
  "contact_person": null,
  "dominated_area": null,
  "door_color": null,
  "feedback_from_neighbour": null,
  "final_status": null,
  "flat_no": null,
  "landmark1": null,
  "landmark2": null,
  "landmark3": null,
  "landmark4": null,
  "locality": null,
  "met_person_designation": null,
  "met_person_name": null,
  "name_on_noc": null,
  "office_status": null,
  "other_observation": null,
  "political_connection": null,
  "premises_status": null,
  "tpc_confirmation1": null,
  "tpc_confirmation2": null,
  "tpc_met_person1": null,
  "tpc_met_person2": null,
  "tpc_name1": null,
  "tpc_name2": null,
}
`;

exports[`ensureAll*FieldsPopulated — full field shape per form type > noc / UNTRACEABLE — empty input yields the canonical field set (all null) 1`] = `
{
  "address_floor": null,
  "address_locatable": null,
  "address_rating": null,
  "address_structure": null,
  "address_structure_color": null,
  "authorised_signature": null,
  "call_remark": null,
  "contact_person": null,
  "dominated_area": null,
  "door_color": null,
  "feedback_from_neighbour": null,
  "final_status": null,
  "flat_no": null,
  "landmark1": null,
  "landmark2": null,
  "landmark3": null,
  "landmark4": null,
  "locality": null,
  "met_person_designation": null,
  "met_person_name": null,
  "name_on_noc": null,
  "office_status": null,
  "other_observation": null,
  "political_connection": null,
  "premises_status": null,
  "tpc_confirmation1": null,
  "tpc_confirmation2": null,
  "tpc_met_person1": null,
  "tpc_met_person2": null,
  "tpc_name1": null,
  "tpc_name2": null,
}
`;

exports[`ensureAll*FieldsPopulated — full field shape per form type > noc — unknown formType still returns the canonical field set 1`] = `
{
  "address_floor": null,
  "address_locatable": null,
  "address_rating": null,
  "address_structure": null,
  "address_structure_color": null,
  "authorised_signature": null,
  "call_remark": null,
  "contact_person": null,
  "dominated_area": null,
  "door_color": null,
  "feedback_from_neighbour": null,
  "final_status": null,
  "flat_no": null,
  "landmark1": null,
  "landmark2": null,
  "landmark3": null,
  "landmark4": null,
  "locality": null,
  "met_person_designation": null,
  "met_person_name": null,
  "name_on_noc": null,
  "office_status": null,
  "other_observation": null,
  "political_connection": null,
  "premises_status": null,
  "tpc_confirmation1": null,
  "tpc_confirmation2": null,
  "tpc_met_person1": null,
  "tpc_met_person2": null,
  "tpc_name1": null,
  "tpc_name2": null,
}
`;

exports[`ensureAll*FieldsPopulated — full field shape per form type > office / ENTRY_RESTRICTED — empty input yields the canonical field set (all null) 1`] = `
{
  "address_floor": null,
  "address_locatable": null,
  "address_rating": null,
  "address_structure": null,
  "address_structure_color": null,
  "applicant_designation": null,
  "applicant_working_premises": null,
  "applicant_working_status": null,
  "business_period": null,
  "call_remark": null,
  "company_name_plate_status": null,
  "company_nature_of_business": null,
  "contact_person": null,
  "current_company_name": null,
  "document_shown": null,
  "document_type": null,
  "dominated_area": null,
  "door_color": null,
  "establishment_period": null,
  "feedback_from_neighbour": null,
  "final_status": null,
  "landmark1": null,
  "landmark2": null,
  "landmark3": null,
  "landmark4": null,
  "locality": null,
  "met_person_confirmation": null,
  "met_person_designation": null,
  "met_person_name": null,
  "met_person_type": null,
  "name_on_board": null,
  "office_approx_area": null,
  "office_existence": null,
  "office_status": null,
  "office_type": null,
  "old_office_shifted_period": null,
  "other_observation": null,
  "political_connection": null,
  "staff_seen": null,
  "staff_strength": null,
  "tpc_confirmation1": null,
  "tpc_confirmation2": null,
  "tpc_met_person1": null,
  "tpc_met_person2": null,
  "tpc_name1": null,
  "tpc_name2": null,
  "working_period": null,
  "working_status": null,
}
`;

exports[`ensureAll*FieldsPopulated — full field shape per form type > office / NSP — empty input yields the canonical field set (all null) 1`] = `
{
  "address_floor": null,
  "address_locatable": null,
  "address_rating": null,
  "address_structure": null,
  "address_structure_color": null,
  "applicant_designation": null,
  "applicant_working_premises": null,
  "applicant_working_status": null,
  "business_period": null,
  "call_remark": null,
  "company_name_plate_status": null,
  "company_nature_of_business": null,
  "contact_person": null,
  "current_company_name": null,
  "document_shown": null,
  "document_type": null,
  "dominated_area": null,
  "door_color": null,
  "establishment_period": null,
  "feedback_from_neighbour": null,
  "final_status": null,
  "landmark1": null,
  "landmark2": null,
  "landmark3": null,
  "landmark4": null,
  "locality": null,
  "met_person_confirmation": null,
  "met_person_designation": null,
  "met_person_name": null,
  "met_person_type": null,
  "name_on_board": null,
  "office_approx_area": null,
  "office_existence": null,
  "office_status": null,
  "office_type": null,
  "old_office_shifted_period": null,
  "other_observation": null,
  "political_connection": null,
  "staff_seen": null,
  "staff_strength": null,
  "tpc_confirmation1": null,
  "tpc_confirmation2": null,
  "tpc_met_person1": null,
  "tpc_met_person2": null,
  "tpc_name1": null,
  "tpc_name2": null,
  "working_period": null,
  "working_status": null,
}
`;

exports[`ensureAll*FieldsPopulated — full field shape per form type > office / POSITIVE — empty input yields the canonical field set (all null) 1`] = `
{
  "address_floor": null,
  "address_locatable": null,
  "address_rating": null,
  "address_structure": null,
  "address_structure_color": null,
  "applicant_designation": null,
  "applicant_working_premises": null,
  "applicant_working_status": null,
  "business_period": null,
  "call_remark": null,
  "company_name_plate_status": null,
  "company_nature_of_business": null,
  "contact_person": null,
  "current_company_name": null,
  "document_shown": null,
  "document_type": null,
  "dominated_area": null,
  "door_color": null,
  "establishment_period": null,
  "feedback_from_neighbour": null,
  "final_status": null,
  "landmark1": null,
  "landmark2": null,
  "landmark3": null,
  "landmark4": null,
  "locality": null,
  "met_person_confirmation": null,
  "met_person_designation": null,
  "met_person_name": null,
  "met_person_type": null,
  "name_on_board": null,
  "office_approx_area": null,
  "office_existence": null,
  "office_status": null,
  "office_type": null,
  "old_office_shifted_period": null,
  "other_observation": null,
  "political_connection": null,
  "staff_seen": null,
  "staff_strength": null,
  "tpc_confirmation1": null,
  "tpc_confirmation2": null,
  "tpc_met_person1": null,
  "tpc_met_person2": null,
  "tpc_name1": null,
  "tpc_name2": null,
  "working_period": null,
  "working_status": null,
}
`;

exports[`ensureAll*FieldsPopulated — full field shape per form type > office / SHIFTED — empty input yields the canonical field set (all null) 1`] = `
{
  "address_floor": null,
  "address_locatable": null,
  "address_rating": null,
  "address_structure": null,
  "address_structure_color": null,
  "applicant_designation": null,
  "applicant_working_premises": null,
  "applicant_working_status": null,
  "business_period": null,
  "call_remark": null,
  "company_name_plate_status": null,
  "company_nature_of_business": null,
  "contact_person": null,
  "current_company_name": null,
  "document_shown": null,
  "document_type": null,
  "dominated_area": null,
  "door_color": null,
  "establishment_period": null,
  "feedback_from_neighbour": null,
  "final_status": null,
  "landmark1": null,
  "landmark2": null,
  "landmark3": null,
  "landmark4": null,
  "locality": null,
  "met_person_confirmation": null,
  "met_person_designation": null,
  "met_person_name": null,
  "met_person_type": null,
  "name_on_board": null,
  "office_approx_area": null,
  "office_existence": null,
  "office_status": null,
  "office_type": null,
  "old_office_shifted_period": null,
  "other_observation": null,
  "political_connection": null,
  "staff_seen": null,
  "staff_strength": null,
  "tpc_confirmation1": null,
  "tpc_confirmation2": null,
  "tpc_met_person1": null,
  "tpc_met_person2": null,
  "tpc_name1": null,
  "tpc_name2": null,
  "working_period": null,
  "working_status": null,
}
`;

exports[`ensureAll*FieldsPopulated — full field shape per form type > office / UNTRACEABLE — empty input yields the canonical field set (all null) 1`] = `
{
  "address_floor": null,
  "address_locatable": null,
  "address_rating": null,
  "address_structure": null,
  "address_structure_color": null,
  "applicant_designation": null,
  "applicant_working_premises": null,
  "applicant_working_status": null,
  "business_period": null,
  "call_remark": null,
  "company_name_plate_status": null,
  "company_nature_of_business": null,
  "contact_person": null,
  "current_company_name": null,
  "document_shown": null,
  "document_type": null,
  "dominated_area": null,
  "door_color": null,
  "establishment_period": null,
  "feedback_from_neighbour": null,
  "final_status": null,
  "landmark1": null,
  "landmark2": null,
  "landmark3": null,
  "landmark4": null,
  "locality": null,
  "met_person_confirmation": null,
  "met_person_designation": null,
  "met_person_name": null,
  "met_person_type": null,
  "name_on_board": null,
  "office_approx_area": null,
  "office_existence": null,
  "office_status": null,
  "office_type": null,
  "old_office_shifted_period": null,
  "other_observation": null,
  "political_connection": null,
  "staff_seen": null,
  "staff_strength": null,
  "tpc_confirmation1": null,
  "tpc_confirmation2": null,
  "tpc_met_person1": null,
  "tpc_met_person2": null,
  "tpc_name1": null,
  "tpc_name2": null,
  "working_period": null,
  "working_status": null,
}
`;

exports[`ensureAll*FieldsPopulated — full field shape per form type > office — unknown formType still returns the canonical field set 1`] = `
{
  "address_floor": null,
  "address_locatable": null,
  "address_rating": null,
  "address_structure": null,
  "address_structure_color": null,
  "applicant_designation": null,
  "applicant_working_premises": null,
  "applicant_working_status": null,
  "business_period": null,
  "call_remark": null,
  "company_name_plate_status": null,
  "company_nature_of_business": null,
  "contact_person": null,
  "current_company_name": null,
  "document_shown": null,
  "document_type": null,
  "dominated_area": null,
  "door_color": null,
  "establishment_period": null,
  "feedback_from_neighbour": null,
  "final_status": null,
  "landmark1": null,
  "landmark2": null,
  "landmark3": null,
  "landmark4": null,
  "locality": null,
  "met_person_confirmation": null,
  "met_person_designation": null,
  "met_person_name": null,
  "met_person_type": null,
  "name_on_board": null,
  "office_approx_area": null,
  "office_existence": null,
  "office_status": null,
  "office_type": null,
  "old_office_shifted_period": null,
  "other_observation": null,
  "political_connection": null,
  "staff_seen": null,
  "staff_strength": null,
  "tpc_confirmation1": null,
  "tpc_confirmation2": null,
  "tpc_met_person1": null,
  "tpc_met_person2": null,
  "tpc_name1": null,
  "tpc_name2": null,
  "working_period": null,
  "working_status": null,
}
`;

exports[`ensureAll*FieldsPopulated — full field shape per form type > propertyApf / ENTRY_RESTRICTED — empty input yields the canonical field set (all null) 1`] = `
{
  "activity_stop_reason": null,
  "address_locatable": null,
  "address_rating": null,
  "building_status": null,
  "call_remark": null,
  "company_name_plate_status": null,
  "construction_activity": null,
  "contact_person": null,
  "dominated_area": null,
  "feedback_from_neighbour": null,
  "final_status": null,
  "landmark1": null,
  "landmark2": null,
  "landmark3": null,
  "landmark4": null,
  "locality": null,
  "met_person_confirmation": null,
  "met_person_designation": null,
  "met_person_name": null,
  "met_person_type": null,
  "name_on_board": null,
  "other_observation": null,
  "political_connection": null,
  "project_completion_date": null,
  "project_completion_percentage": null,
  "project_name": null,
  "project_started_date": null,
  "staff_seen": null,
  "staff_strength": null,
  "total_flats": null,
  "total_wing": null,
  "tpc_confirmation1": null,
  "tpc_confirmation2": null,
  "tpc_met_person1": null,
  "tpc_met_person2": null,
  "tpc_name1": null,
  "tpc_name2": null,
}
`;

exports[`ensureAll*FieldsPopulated — full field shape per form type > propertyApf / NSP — empty input yields the canonical field set (all null) 1`] = `
{
  "activity_stop_reason": null,
  "address_locatable": null,
  "address_rating": null,
  "building_status": null,
  "call_remark": null,
  "company_name_plate_status": null,
  "construction_activity": null,
  "contact_person": null,
  "dominated_area": null,
  "feedback_from_neighbour": null,
  "final_status": null,
  "landmark1": null,
  "landmark2": null,
  "landmark3": null,
  "landmark4": null,
  "locality": null,
  "met_person_confirmation": null,
  "met_person_designation": null,
  "met_person_name": null,
  "met_person_type": null,
  "name_on_board": null,
  "other_observation": null,
  "political_connection": null,
  "project_completion_date": null,
  "project_completion_percentage": null,
  "project_name": null,
  "project_started_date": null,
  "staff_seen": null,
  "staff_strength": null,
  "total_flats": null,
  "total_wing": null,
  "tpc_confirmation1": null,
  "tpc_confirmation2": null,
  "tpc_met_person1": null,
  "tpc_met_person2": null,
  "tpc_name1": null,
  "tpc_name2": null,
}
`;

exports[`ensureAll*FieldsPopulated — full field shape per form type > propertyApf / POSITIVE — empty input yields the canonical field set (all null) 1`] = `
{
  "activity_stop_reason": null,
  "address_locatable": null,
  "address_rating": null,
  "building_status": null,
  "call_remark": null,
  "company_name_plate_status": null,
  "construction_activity": null,
  "contact_person": null,
  "dominated_area": null,
  "feedback_from_neighbour": null,
  "final_status": null,
  "landmark1": null,
  "landmark2": null,
  "landmark3": null,
  "landmark4": null,
  "locality": null,
  "met_person_confirmation": null,
  "met_person_designation": null,
  "met_person_name": null,
  "met_person_type": null,
  "name_on_board": null,
  "other_observation": null,
  "political_connection": null,
  "project_completion_date": null,
  "project_completion_percentage": null,
  "project_name": null,
  "project_started_date": null,
  "staff_seen": null,
  "staff_strength": null,
  "total_flats": null,
  "total_wing": null,
  "tpc_confirmation1": null,
  "tpc_confirmation2": null,
  "tpc_met_person1": null,
  "tpc_met_person2": null,
  "tpc_name1": null,
  "tpc_name2": null,
}
`;

exports[`ensureAll*FieldsPopulated — full field shape per form type > propertyApf / SHIFTED — empty input yields the canonical field set (all null) 1`] = `
{
  "activity_stop_reason": null,
  "address_locatable": null,
  "address_rating": null,
  "building_status": null,
  "call_remark": null,
  "company_name_plate_status": null,
  "construction_activity": null,
  "contact_person": null,
  "dominated_area": null,
  "feedback_from_neighbour": null,
  "final_status": null,
  "landmark1": null,
  "landmark2": null,
  "landmark3": null,
  "landmark4": null,
  "locality": null,
  "met_person_confirmation": null,
  "met_person_designation": null,
  "met_person_name": null,
  "met_person_type": null,
  "name_on_board": null,
  "other_observation": null,
  "political_connection": null,
  "project_completion_date": null,
  "project_completion_percentage": null,
  "project_name": null,
  "project_started_date": null,
  "staff_seen": null,
  "staff_strength": null,
  "total_flats": null,
  "total_wing": null,
  "tpc_confirmation1": null,
  "tpc_confirmation2": null,
  "tpc_met_person1": null,
  "tpc_met_person2": null,
  "tpc_name1": null,
  "tpc_name2": null,
}
`;

exports[`ensureAll*FieldsPopulated — full field shape per form type > propertyApf / UNTRACEABLE — empty input yields the canonical field set (all null) 1`] = `
{
  "activity_stop_reason": null,
  "address_locatable": null,
  "address_rating": null,
  "building_status": null,
  "call_remark": null,
  "company_name_plate_status": null,
  "construction_activity": null,
  "contact_person": null,
  "dominated_area": null,
  "feedback_from_neighbour": null,
  "final_status": null,
  "landmark1": null,
  "landmark2": null,
  "landmark3": null,
  "landmark4": null,
  "locality": null,
  "met_person_confirmation": null,
  "met_person_designation": null,
  "met_person_name": null,
  "met_person_type": null,
  "name_on_board": null,
  "other_observation": null,
  "political_connection": null,
  "project_completion_date": null,
  "project_completion_percentage": null,
  "project_name": null,
  "project_started_date": null,
  "staff_seen": null,
  "staff_strength": null,
  "total_flats": null,
  "total_wing": null,
  "tpc_confirmation1": null,
  "tpc_confirmation2": null,
  "tpc_met_person1": null,
  "tpc_met_person2": null,
  "tpc_name1": null,
  "tpc_name2": null,
}
`;

exports[`ensureAll*FieldsPopulated — full field shape per form type > propertyApf — unknown formType still returns the canonical field set 1`] = `
{
  "activity_stop_reason": null,
  "address_locatable": null,
  "address_rating": null,
  "building_status": null,
  "call_remark": null,
  "company_name_plate_status": null,
  "construction_activity": null,
  "contact_person": null,
  "dominated_area": null,
  "feedback_from_neighbour": null,
  "final_status": null,
  "landmark1": null,
  "landmark2": null,
  "landmark3": null,
  "landmark4": null,
  "locality": null,
  "met_person_confirmation": null,
  "met_person_designation": null,
  "met_person_name": null,
  "met_person_type": null,
  "name_on_board": null,
  "other_observation": null,
  "political_connection": null,
  "project_completion_date": null,
  "project_completion_percentage": null,
  "project_name": null,
  "project_started_date": null,
  "staff_seen": null,
  "staff_strength": null,
  "total_flats": null,
  "total_wing": null,
  "tpc_confirmation1": null,
  "tpc_confirmation2": null,
  "tpc_met_person1": null,
  "tpc_met_person2": null,
  "tpc_name1": null,
  "tpc_name2": null,
}
`;

exports[`ensureAll*FieldsPopulated — full field shape per form type > propertyIndividual / ENTRY_RESTRICTED — empty input yields the canonical field set (all null) 1`] = `
{
  "address_exist_at": null,
  "address_locatable": null,
  "address_rating": null,
  "address_structure": null,
  "address_structure_color": null,
  "call_remark": null,
  "contact_person": null,
  "dominated_area": null,
  "door_color": null,
  "door_name_plate_status": null,
  "feedback_from_neighbour": null,
  "final_status": null,
  "flat_status": null,
  "landmark1": null,
  "landmark2": null,
  "landmark3": null,
  "landmark4": null,
  "locality": null,
  "met_person_confirmation": null,
  "met_person_designation": null,
  "met_person_name": null,
  "met_person_relation": null,
  "met_person_type": null,
  "name_on_door_plate": null,
  "name_on_society_board": null,
  "other_observation": null,
  "owner_name": null,
  "political_connection": null,
  "premises_status": null,
  "property_area": null,
  "property_status": null,
  "security_confirmation": null,
  "society_name_plate": null,
  "tpc_confirmation1": null,
  "tpc_confirmation2": null,
  "tpc_met_person1": null,
  "tpc_met_person2": null,
  "tpc_name1": null,
  "tpc_name2": null,
}
`;

exports[`ensureAll*FieldsPopulated — full field shape per form type > propertyIndividual / NSP — empty input yields the canonical field set (all null) 1`] = `
{
  "address_exist_at": null,
  "address_locatable": null,
  "address_rating": null,
  "address_structure": null,
  "address_structure_color": null,
  "call_remark": null,
  "contact_person": null,
  "dominated_area": null,
  "door_color": null,
  "door_name_plate_status": null,
  "feedback_from_neighbour": null,
  "final_status": null,
  "flat_status": null,
  "landmark1": null,
  "landmark2": null,
  "landmark3": null,
  "landmark4": null,
  "locality": null,
  "met_person_confirmation": null,
  "met_person_designation": null,
  "met_person_name": null,
  "met_person_relation": null,
  "met_person_type": null,
  "name_on_door_plate": null,
  "name_on_society_board": null,
  "other_observation": null,
  "owner_name": null,
  "political_connection": null,
  "premises_status": null,
  "property_area": null,
  "property_status": null,
  "security_confirmation": null,
  "society_name_plate": null,
  "tpc_confirmation1": null,
  "tpc_confirmation2": null,
  "tpc_met_person1": null,
  "tpc_met_person2": null,
  "tpc_name1": null,
  "tpc_name2": null,
}
`;

exports[`ensureAll*FieldsPopulated — full field shape per form type > propertyIndividual / POSITIVE — empty input yields the canonical field set (all null) 1`] = `
{
  "address_exist_at": null,
  "address_locatable": null,
  "address_rating": null,
  "address_structure": null,
  "address_structure_color": null,
  "call_remark": null,
  "contact_person": null,
  "dominated_area": null,
  "door_color": null,
  "door_name_plate_status": null,
  "feedback_from_neighbour": null,
  "final_status": null,
  "flat_status": null,
  "landmark1": null,
  "landmark2": null,
  "landmark3": null,
  "landmark4": null,
  "locality": null,
  "met_person_confirmation": null,
  "met_person_designation": null,
  "met_person_name": null,
  "met_person_relation": null,
  "met_person_type": null,
  "name_on_door_plate": null,
  "name_on_society_board": null,
  "other_observation": null,
  "owner_name": null,
  "political_connection": null,
  "premises_status": null,
  "property_area": null,
  "property_status": null,
  "security_confirmation": null,
  "society_name_plate": null,
  "tpc_confirmation1": null,
  "tpc_confirmation2": null,
  "tpc_met_person1": null,
  "tpc_met_person2": null,
  "tpc_name1": null,
  "tpc_name2": null,
}
`;

exports[`ensureAll*FieldsPopulated — full field shape per form type > propertyIndividual / SHIFTED — empty input yields the canonical field set (all null) 1`] = `
{
  "address_exist_at": null,
  "address_locatable": null,
  "address_rating": null,
  "address_structure": null,
  "address_structure_color": null,
  "call_remark": null,
  "contact_person": null,
  "dominated_area": null,
  "door_color": null,
  "door_name_plate_status": null,
  "feedback_from_neighbour": null,
  "final_status": null,
  "flat_status": null,
  "landmark1": null,
  "landmark2": null,
  "landmark3": null,
  "landmark4": null,
  "locality": null,
  "met_person_confirmation": null,
  "met_person_designation": null,
  "met_person_name": null,
  "met_person_relation": null,
  "met_person_type": null,
  "name_on_door_plate": null,
  "name_on_society_board": null,
  "other_observation": null,
  "owner_name": null,
  "political_connection": null,
  "premises_status": null,
  "property_area": null,
  "property_status": null,
  "security_confirmation": null,
  "society_name_plate": null,
  "tpc_confirmation1": null,
  "tpc_confirmation2": null,
  "tpc_met_person1": null,
  "tpc_met_person2": null,
  "tpc_name1": null,
  "tpc_name2": null,
}
`;

exports[`ensureAll*FieldsPopulated — full field shape per form type > propertyIndividual / UNTRACEABLE — empty input yields the canonical field set (all null) 1`] = `
{
  "address_exist_at": null,
  "address_locatable": null,
  "address_rating": null,
  "address_structure": null,
  "address_structure_color": null,
  "call_remark": null,
  "contact_person": null,
  "dominated_area": null,
  "door_color": null,
  "door_name_plate_status": null,
  "feedback_from_neighbour": null,
  "final_status": null,
  "flat_status": null,
  "landmark1": null,
  "landmark2": null,
  "landmark3": null,
  "landmark4": null,
  "locality": null,
  "met_person_confirmation": null,
  "met_person_designation": null,
  "met_person_name": null,
  "met_person_relation": null,
  "met_person_type": null,
  "name_on_door_plate": null,
  "name_on_society_board": null,
  "other_observation": null,
  "owner_name": null,
  "political_connection": null,
  "premises_status": null,
  "property_area": null,
  "property_status": null,
  "security_confirmation": null,
  "society_name_plate": null,
  "tpc_confirmation1": null,
  "tpc_confirmation2": null,
  "tpc_met_person1": null,
  "tpc_met_person2": null,
  "tpc_name1": null,
  "tpc_name2": null,
}
`;

exports[`ensureAll*FieldsPopulated — full field shape per form type > propertyIndividual — unknown formType still returns the canonical field set 1`] = `
{
  "address_exist_at": null,
  "address_locatable": null,
  "address_rating": null,
  "address_structure": null,
  "address_structure_color": null,
  "call_remark": null,
  "contact_person": null,
  "dominated_area": null,
  "door_color": null,
  "door_name_plate_status": null,
  "feedback_from_neighbour": null,
  "final_status": null,
  "flat_status": null,
  "landmark1": null,
  "landmark2": null,
  "landmark3": null,
  "landmark4": null,
  "locality": null,
  "met_person_confirmation": null,
  "met_person_designation": null,
  "met_person_name": null,
  "met_person_relation": null,
  "met_person_type": null,
  "name_on_door_plate": null,
  "name_on_society_board": null,
  "other_observation": null,
  "owner_name": null,
  "political_connection": null,
  "premises_status": null,
  "property_area": null,
  "property_status": null,
  "security_confirmation": null,
  "society_name_plate": null,
  "tpc_confirmation1": null,
  "tpc_confirmation2": null,
  "tpc_met_person1": null,
  "tpc_met_person2": null,
  "tpc_name1": null,
  "tpc_name2": null,
}
`;

exports[`ensureAll*FieldsPopulated — full field shape per form type > residence / ENTRY_RESTRICTED — empty input yields the canonical field set (all null) 1`] = `
{
  "address_floor": null,
  "address_locatable": null,
  "address_rating": null,
  "address_structure": null,
  "address_structure_color": null,
  "applicant_staying_floor": null,
  "applicant_staying_status": null,
  "approx_area": null,
  "call_remark": null,
  "company_name": null,
  "contact_person": null,
  "document_shown": null,
  "document_type": null,
  "dominated_area": null,
  "door_color": null,
  "door_name_plate_status": null,
  "feedback_from_neighbour": null,
  "final_status": null,
  "house_status": null,
  "landmark1": null,
  "landmark2": null,
  "landmark3": null,
  "landmark4": null,
  "locality": null,
  "met_person_confirmation": null,
  "met_person_name": null,
  "met_person_relation": null,
  "met_person_status": null,
  "met_person_type": null,
  "name_on_door_plate": null,
  "name_on_society_board": null,
  "other_observation": null,
  "political_connection": null,
  "premises_status": null,
  "shifted_period": null,
  "society_name_plate_status": null,
  "staying_period": null,
  "staying_person_name": null,
  "staying_status": null,
  "total_earning_member": null,
  "total_family_members": null,
  "tpc_confirmation1": null,
  "tpc_confirmation2": null,
  "tpc_met_person1": null,
  "tpc_met_person2": null,
  "tpc_name1": null,
  "tpc_name2": null,
  "working_status": null,
}
`;

exports[`ensureAll*FieldsPopulated — full field shape per form type > residence / NSP — empty input yields the canonical field set (all null) 1`] = `
{
  "address_floor": null,
  "address_locatable": null,
  "address_rating": null,
  "address_structure": null,
  "address_structure_color": null,
  "applicant_staying_floor": null,
  "applicant_staying_status": null,
  "approx_area": null,
  "call_remark": null,
  "company_name": null,
  "contact_person": null,
  "document_shown": null,
  "document_type": null,
  "dominated_area": null,
  "door_color": null,
  "door_name_plate_status": null,
  "feedback_from_neighbour": null,
  "final_status": null,
  "house_status": null,
  "landmark1": null,
  "landmark2": null,
  "landmark3": null,
  "landmark4": null,
  "locality": null,
  "met_person_confirmation": null,
  "met_person_name": null,
  "met_person_relation": null,
  "met_person_status": null,
  "met_person_type": null,
  "name_on_door_plate": null,
  "name_on_society_board": null,
  "other_observation": null,
  "political_connection": null,
  "premises_status": null,
  "shifted_period": null,
  "society_name_plate_status": null,
  "staying_period": null,
  "staying_person_name": null,
  "staying_status": null,
  "total_earning_member": null,
  "total_family_members": null,
  "tpc_confirmation1": null,
  "tpc_confirmation2": null,
  "tpc_met_person1": null,
  "tpc_met_person2": null,
  "tpc_name1": null,
  "tpc_name2": null,
  "working_status": null,
}
`;

exports[`ensureAll*FieldsPopulated — full field shape per form type > residence / POSITIVE — empty input yields the canonical field set (all null) 1`] = `
{
  "address_floor": null,
  "address_locatable": null,
  "address_rating": null,
  "address_structure": null,
  "address_structure_color": null,
  "applicant_staying_floor": null,
  "applicant_staying_status": null,
  "approx_area": null,
  "call_remark": null,
  "company_name": null,
  "contact_person": null,
  "document_shown": null,
  "document_type": null,
  "dominated_area": null,
  "door_color": null,
  "door_name_plate_status": null,
  "feedback_from_neighbour": null,
  "final_status": null,
  "house_status": null,
  "landmark1": null,
  "landmark2": null,
  "landmark3": null,
  "landmark4": null,
  "locality": null,
  "met_person_confirmation": null,
  "met_person_name": null,
  "met_person_relation": null,
  "met_person_status": null,
  "met_person_type": null,
  "name_on_door_plate": null,
  "name_on_society_board": null,
  "other_observation": null,
  "political_connection": null,
  "premises_status": null,
  "shifted_period": null,
  "society_name_plate_status": null,
  "staying_period": null,
  "staying_person_name": null,
  "staying_status": null,
  "total_earning_member": null,
  "total_family_members": null,
  "tpc_confirmation1": null,
  "tpc_confirmation2": null,
  "tpc_met_person1": null,
  "tpc_met_person2": null,
  "tpc_name1": null,
  "tpc_name2": null,
  "working_status": null,
}
`;

exports[`ensureAll*FieldsPopulated — full field shape per form type > residence / SHIFTED — empty input yields the canonical field set (all null) 1`] = `
{
  "address_floor": null,
  "address_locatable": null,
  "address_rating": null,
  "address_structure": null,
  "address_structure_color": null,
  "applicant_staying_floor": null,
  "applicant_staying_status": null,
  "approx_area": null,
  "call_remark": null,
  "company_name": null,
  "contact_person": null,
  "document_shown": null,
  "document_type": null,
  "dominated_area": null,
  "door_color": null,
  "door_name_plate_status": null,
  "feedback_from_neighbour": null,
  "final_status": null,
  "house_status": null,
  "landmark1": null,
  "landmark2": null,
  "landmark3": null,
  "landmark4": null,
  "locality": null,
  "met_person_confirmation": null,
  "met_person_name": null,
  "met_person_relation": null,
  "met_person_status": null,
  "met_person_type": null,
  "name_on_door_plate": null,
  "name_on_society_board": null,
  "other_observation": null,
  "political_connection": null,
  "premises_status": null,
  "shifted_period": null,
  "society_name_plate_status": null,
  "staying_period": null,
  "staying_person_name": null,
  "staying_status": null,
  "total_earning_member": null,
  "total_family_members": null,
  "tpc_confirmation1": null,
  "tpc_confirmation2": null,
  "tpc_met_person1": null,
  "tpc_met_person2": null,
  "tpc_name1": null,
  "tpc_name2": null,
  "working_status": null,
}
`;

exports[`ensureAll*FieldsPopulated — full field shape per form type > residence / UNTRACEABLE — empty input yields the canonical field set (all null) 1`] = `
{
  "address_floor": null,
  "address_locatable": null,
  "address_rating": null,
  "address_structure": null,
  "address_structure_color": null,
  "applicant_staying_floor": null,
  "applicant_staying_status": null,
  "approx_area": null,
  "call_remark": null,
  "company_name": null,
  "contact_person": null,
  "document_shown": null,
  "document_type": null,
  "dominated_area": null,
  "door_color": null,
  "door_name_plate_status": null,
  "feedback_from_neighbour": null,
  "final_status": null,
  "house_status": null,
  "landmark1": null,
  "landmark2": null,
  "landmark3": null,
  "landmark4": null,
  "locality": null,
  "met_person_confirmation": null,
  "met_person_name": null,
  "met_person_relation": null,
  "met_person_status": null,
  "met_person_type": null,
  "name_on_door_plate": null,
  "name_on_society_board": null,
  "other_observation": null,
  "political_connection": null,
  "premises_status": null,
  "shifted_period": null,
  "society_name_plate_status": null,
  "staying_period": null,
  "staying_person_name": null,
  "staying_status": null,
  "total_earning_member": null,
  "total_family_members": null,
  "tpc_confirmation1": null,
  "tpc_confirmation2": null,
  "tpc_met_person1": null,
  "tpc_met_person2": null,
  "tpc_name1": null,
  "tpc_name2": null,
  "working_status": null,
}
`;

exports[`ensureAll*FieldsPopulated — full field shape per form type > residence — unknown formType still returns the canonical field set 1`] = `
{
  "address_floor": null,
  "address_locatable": null,
  "address_rating": null,
  "address_structure": null,
  "address_structure_color": null,
  "applicant_staying_floor": null,
  "applicant_staying_status": null,
  "approx_area": null,
  "call_remark": null,
  "company_name": null,
  "contact_person": null,
  "document_shown": null,
  "document_type": null,
  "dominated_area": null,
  "door_color": null,
  "door_name_plate_status": null,
  "feedback_from_neighbour": null,
  "final_status": null,
  "house_status": null,
  "landmark1": null,
  "landmark2": null,
  "landmark3": null,
  "landmark4": null,
  "locality": null,
  "met_person_confirmation": null,
  "met_person_name": null,
  "met_person_relation": null,
  "met_person_status": null,
  "met_person_type": null,
  "name_on_door_plate": null,
  "name_on_society_board": null,
  "other_observation": null,
  "political_connection": null,
  "premises_status": null,
  "shifted_period": null,
  "society_name_plate_status": null,
  "staying_period": null,
  "staying_person_name": null,
  "staying_status": null,
  "total_earning_member": null,
  "total_family_members": null,
  "tpc_confirmation1": null,
  "tpc_confirmation2": null,
  "tpc_met_person1": null,
  "tpc_met_person2": null,
  "tpc_name1": null,
  "tpc_name2": null,
  "working_status": null,
}
`;

exports[`ensureAll*FieldsPopulated — full field shape per form type > residenceCumOffice / ENTRY_RESTRICTED — empty input yields the canonical field set (all null) 1`] = `
{
  "address_floor": null,
  "address_locatable": null,
  "address_rating": null,
  "address_structure": null,
  "address_structure_color": null,
  "applicant_staying_status": null,
  "applicant_working_status": null,
  "approx_area": null,
  "business_period": null,
  "call_remark": null,
  "company_name_plate_status": null,
  "company_nature_of_business": null,
  "contact_person": null,
  "document_shown": null,
  "document_type": null,
  "dominated_area": null,
  "door_color": null,
  "door_name_plate_status": null,
  "feedback_from_neighbour": null,
  "final_status": null,
  "landmark1": null,
  "landmark2": null,
  "landmark3": null,
  "landmark4": null,
  "locality": null,
  "met_person_confirmation": null,
  "met_person_name": null,
  "met_person_relation": null,
  "met_person_type": null,
  "name_on_board": null,
  "name_on_door_plate": null,
  "name_on_society_board": null,
  "other_observation": null,
  "political_connection": null,
  "shifted_period": null,
  "society_name_plate_status": null,
  "staying_period": null,
  "staying_status": null,
  "tpc_confirmation1": null,
  "tpc_confirmation2": null,
  "tpc_met_person1": null,
  "tpc_met_person2": null,
  "tpc_name1": null,
  "tpc_name2": null,
}
`;

exports[`ensureAll*FieldsPopulated — full field shape per form type > residenceCumOffice / NSP — empty input yields the canonical field set (all null) 1`] = `
{
  "address_floor": null,
  "address_locatable": null,
  "address_rating": null,
  "address_structure": null,
  "address_structure_color": null,
  "applicant_staying_status": null,
  "applicant_working_status": null,
  "approx_area": null,
  "business_period": null,
  "call_remark": null,
  "company_name_plate_status": null,
  "company_nature_of_business": null,
  "contact_person": null,
  "document_shown": null,
  "document_type": null,
  "dominated_area": null,
  "door_color": null,
  "door_name_plate_status": null,
  "feedback_from_neighbour": null,
  "final_status": null,
  "landmark1": null,
  "landmark2": null,
  "landmark3": null,
  "landmark4": null,
  "locality": null,
  "met_person_confirmation": null,
  "met_person_name": null,
  "met_person_relation": null,
  "met_person_type": null,
  "name_on_board": null,
  "name_on_door_plate": null,
  "name_on_society_board": null,
  "other_observation": null,
  "political_connection": null,
  "shifted_period": null,
  "society_name_plate_status": null,
  "staying_period": null,
  "staying_status": null,
  "tpc_confirmation1": null,
  "tpc_confirmation2": null,
  "tpc_met_person1": null,
  "tpc_met_person2": null,
  "tpc_name1": null,
  "tpc_name2": null,
}
`;

exports[`ensureAll*FieldsPopulated — full field shape per form type > residenceCumOffice / POSITIVE — empty input yields the canonical field set (all null) 1`] = `
{
  "address_floor": null,
  "address_locatable": null,
  "address_rating": null,
  "address_structure": null,
  "address_structure_color": null,
  "applicant_staying_status": null,
  "applicant_working_status": null,
  "approx_area": null,
  "business_period": null,
  "call_remark": null,
  "company_name_plate_status": null,
  "company_nature_of_business": null,
  "contact_person": null,
  "document_shown": null,
  "document_type": null,
  "dominated_area": null,
  "door_color": null,
  "door_name_plate_status": null,
  "feedback_from_neighbour": null,
  "final_status": null,
  "landmark1": null,
  "landmark2": null,
  "landmark3": null,
  "landmark4": null,
  "locality": null,
  "met_person_confirmation": null,
  "met_person_name": null,
  "met_person_relation": null,
  "met_person_type": null,
  "name_on_board": null,
  "name_on_door_plate": null,
  "name_on_society_board": null,
  "other_observation": null,
  "political_connection": null,
  "shifted_period": null,
  "society_name_plate_status": null,
  "staying_period": null,
  "staying_status": null,
  "tpc_confirmation1": null,
  "tpc_confirmation2": null,
  "tpc_met_person1": null,
  "tpc_met_person2": null,
  "tpc_name1": null,
  "tpc_name2": null,
}
`;

exports[`ensureAll*FieldsPopulated — full field shape per form type > residenceCumOffice / SHIFTED — empty input yields the canonical field set (all null) 1`] = `
{
  "address_floor": null,
  "address_locatable": null,
  "address_rating": null,
  "address_structure": null,
  "address_structure_color": null,
  "applicant_staying_status": null,
  "applicant_working_status": null,
  "approx_area": null,
  "business_period": null,
  "call_remark": null,
  "company_name_plate_status": null,
  "company_nature_of_business": null,
  "contact_person": null,
  "document_shown": null,
  "document_type": null,
  "dominated_area": null,
  "door_color": null,
  "door_name_plate_status": null,
  "feedback_from_neighbour": null,
  "final_status": null,
  "landmark1": null,
  "landmark2": null,
  "landmark3": null,
  "landmark4": null,
  "locality": null,
  "met_person_confirmation": null,
  "met_person_name": null,
  "met_person_relation": null,
  "met_person_type": null,
  "name_on_board": null,
  "name_on_door_plate": null,
  "name_on_society_board": null,
  "other_observation": null,
  "political_connection": null,
  "shifted_period": null,
  "society_name_plate_status": null,
  "staying_period": null,
  "staying_status": null,
  "tpc_confirmation1": null,
  "tpc_confirmation2": null,
  "tpc_met_person1": null,
  "tpc_met_person2": null,
  "tpc_name1": null,
  "tpc_name2": null,
}
`;

exports[`ensureAll*FieldsPopulated — full field shape per form type > residenceCumOffice / UNTRACEABLE — empty input yields the canonical field set (all null) 1`] = `
{
  "address_floor": null,
  "address_locatable": null,
  "address_rating": null,
  "address_structure": null,
  "address_structure_color": null,
  "applicant_staying_status": null,
  "applicant_working_status": null,
  "approx_area": null,
  "business_period": null,
  "call_remark": null,
  "company_name_plate_status": null,
  "company_nature_of_business": null,
  "contact_person": null,
  "document_shown": null,
  "document_type": null,
  "dominated_area": null,
  "door_color": null,
  "door_name_plate_status": null,
  "feedback_from_neighbour": null,
  "final_status": null,
  "landmark1": null,
  "landmark2": null,
  "landmark3": null,
  "landmark4": null,
  "locality": null,
  "met_person_confirmation": null,
  "met_person_name": null,
  "met_person_relation": null,
  "met_person_type": null,
  "name_on_board": null,
  "name_on_door_plate": null,
  "name_on_society_board": null,
  "other_observation": null,
  "political_connection": null,
  "shifted_period": null,
  "society_name_plate_status": null,
  "staying_period": null,
  "staying_status": null,
  "tpc_confirmation1": null,
  "tpc_confirmation2": null,
  "tpc_met_person1": null,
  "tpc_met_person2": null,
  "tpc_name1": null,
  "tpc_name2": null,
}
`;

exports[`ensureAll*FieldsPopulated — full field shape per form type > residenceCumOffice — unknown formType still returns the canonical field set 1`] = `
{
  "address_floor": null,
  "address_locatable": null,
  "address_rating": null,
  "address_structure": null,
  "address_structure_color": null,
  "applicant_staying_status": null,
  "applicant_working_status": null,
  "approx_area": null,
  "business_period": null,
  "call_remark": null,
  "company_name_plate_status": null,
  "company_nature_of_business": null,
  "contact_person": null,
  "document_shown": null,
  "document_type": null,
  "dominated_area": null,
  "door_color": null,
  "door_name_plate_status": null,
  "feedback_from_neighbour": null,
  "final_status": null,
  "landmark1": null,
  "landmark2": null,
  "landmark3": null,
  "landmark4": null,
  "locality": null,
  "met_person_confirmation": null,
  "met_person_name": null,
  "met_person_relation": null,
  "met_person_type": null,
  "name_on_board": null,
  "name_on_door_plate": null,
  "name_on_society_board": null,
  "other_observation": null,
  "political_connection": null,
  "shifted_period": null,
  "society_name_plate_status": null,
  "staying_period": null,
  "staying_status": null,
  "tpc_confirmation1": null,
  "tpc_confirmation2": null,
  "tpc_met_person1": null,
  "tpc_met_person2": null,
  "tpc_name1": null,
  "tpc_name2": null,
}
`;

exports[`validateBusinessRequiredFields > flags required fields missing on empty input across form types 1`] = `
{
  "isValid": false,
  "missingFields": [
    "addressLocatable",
    "addressRating",
    "businessStatus",
    "metPerson",
    "metPersonDesignation",
    "businessType",
    "nameOfCompanyOwners",
    "ownershipType",
    "addressStatus",
    "companyNatureOfBusiness",
    "businessPeriod",
    "staffStrength",
    "locality",
    "addressStructure",
    "politicalConnection",
    "dominatedArea",
    "feedbackFromNeighbour",
    "otherObservation",
    "finalStatus",
  ],
  "warnings": [],
}
`;

exports[`validateBusinessRequiredFields > flags required fields missing on empty input across form types 2`] = `
{
  "isValid": false,
  "missingFields": [
    "addressLocatable",
    "addressRating",
    "businessStatus",
    "metPerson",
    "metPersonDesignation",
    "currentCompanyName",
    "oldBusinessShiftedPeriod",
    "locality",
    "addressStructure",
    "politicalConnection",
    "dominatedArea",
    "feedbackFromNeighbour",
    "otherObservation",
    "finalStatus",
  ],
  "warnings": [],
}
`;

exports[`validateBusinessRequiredFields > flags required fields missing on empty input across form types 3`] = `
{
  "isValid": false,
  "missingFields": [
    "addressLocatable",
    "addressRating",
    "businessStatus",
    "businessExistence",
    "metPerson",
    "metPersonDesignation",
    "locality",
    "addressStructure",
    "dominatedArea",
    "otherObservation",
    "finalStatus",
  ],
  "warnings": [],
}
`;

exports[`validateOfficeRequiredFields > flags all required POSITIVE fields missing on empty input 1`] = `
{
  "isValid": false,
  "missingFields": [
    "addressLocatable",
    "addressRating",
    "officeStatus",
    "metPersonName",
    "metPersonDesignation",
    "workingPeriod",
    "applicantDesignation",
    "workingStatus",
    "officeType",
    "companyNatureOfBusiness",
    "staffStrength",
    "locality",
    "addressStructure",
    "politicalConnection",
    "dominatedArea",
    "feedbackFromNeighbour",
    "otherObservation",
    "finalStatus",
  ],
  "warnings": [],
}
`;
